--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.11.2",
-        "admin-lte": "^3.0.1"
+        "admin-lte": "^3.0.1",
+        "sweetalert": "^2.1.2"
     }
 }
